Decrease spacing between exhibitions (fixed #165)

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -201,8 +201,7 @@ header {
   list-style: none;
   padding: 0;
   li {
-    padding: 0;
-    line-height: 2em;
+    padding-bottom: 1%;
   }
 }
 
